RESOLVED FIXED253509
Debug webgl/2.0.y/conformance2/state/gl-object-get-calls.html is slow because synthetic error management is slow
https://bugs.webkit.org/show_bug.cgi?id=253509
Summary Debug webgl/2.0.y/conformance2/state/gl-object-get-calls.html is slow because...
Kimmo Kinnunen
Reported 2023-03-07 06:08:36 PST
Debug webgl/2.0.y/conformance2/state/gl-object-get-calls.html is slow because synthetic error management is slow
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-07 06:09:00 PST
Kimmo Kinnunen
Comment 2 2023-03-07 06:34:07 PST
EWS
Comment 3 2023-03-10 03:00:57 PST
Committed 261494@main (a45c00cc8d70): <https://commits.webkit.org/261494@main> Reviewed commits have been landed. Closing PR #11174 and removing active labels.
Kimmo Kinnunen
Comment 4 2024-01-17 00:37:23 PST
*** Bug 240050 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.