Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.h
@@ -121,8 +121,7 @@ protected:
 #else
     void prepareForDisplay(CompletionHandler<void()>&&);
 #endif
-    void getError(CompletionHandler<void(uint32_t)>&&);
-    void synthesizeGLError(uint32_t error);
+    void getErrors(CompletionHandler<void(GCGLErrorCodeSet)>&&);
     void paintRenderingResultsToCanvas(WebCore::RenderingResourceIdentifier, CompletionHandler<void()>&&);
     void paintCompositedResultsToCanvas(WebCore::RenderingResourceIdentifier, CompletionHandler<void()>&&);
 #if ENABLE(MEDIA_STREAM) || ENABLE(WEB_CODECS)
